test/classes/initializers/compilerGenerated/parent_inherits_initializer_bad.good
parent_inherits_initializer_bad.chpl:24: In function 'main':
parent_inherits_initializer_bad.chpl:25: error: unresolved call 'GrandParent.init()'
parent_inherits_initializer_bad.chpl:10: note: candidates are: GrandParent.init(x1: int, x2: int)
